--- a/notebooks/prepare_datasets.ipynb
+++ b/notebooks/prepare_datasets.ipynb
@@ -18,17 +18,21 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# TODO: to make it look better, env variables can be used and configured on the machine\n",
+    "\n",
     "# Prepare card detector dataset\n",
     "create_tf_record(\n",
     "    images_dir=\"images/train\",\n",
     "    tf_record_filename=\"1_342_train\",\n",
     "    label_map_file_name=\"label_map\",\n",
+    "    annotations_path=\"1_342\",\n",
     "    processor=xml_to_csv,\n",
     ")\n",
     "create_tf_record(\n",
     "    images_dir=\"images/test\",\n",
     "    tf_record_filename=\"1_342_test\",\n",
     "    label_map_file_name=\"label_map\",\n",
+    "    annotations_path=\"1_342\",\n",
     "    processor=xml_to_csv,\n",
     ")"
    ],
@@ -47,12 +51,14 @@
     "    images_dir=\"images/icdar_2013_images/train\",\n",
     "    tf_record_filename=\"icdar_2013/train.tfrecord\",\n",
     "    label_map_file_name=\"icdar_2013/label_map\",\n",
+    "    annotations_path=\"icdar_2013/train\",\n",
     "    processor=txt_to_csv,\n",
     ")\n",
     "create_tf_record(\n",
     "    images_dir=\"images/icdar_2013_images/test\",\n",
     "    tf_record_filename=\"icdar_2013/test.tfrecord\",\n",
     "    label_map_file_name=\"icdar_2013/label_map\",\n",
+    "    annotations_path=\"icdar_2013/test\",\n",
     "    processor=txt_to_csv,\n",
     ")"
    ],
