type hintings, docstrings, api docker volume (for the proper operation of uvicorn's statreload)

--- a/notebooks/prepare_datasets.ipynb
+++ b/notebooks/prepare_datasets.ipynb
@@ -9,8 +9,8 @@
    "outputs": [],
    "source": [
     "from helpers.tf_record import create_tf_record\n",
-    "from helpers.txt_to_df import txt_to_csv\n",
-    "from helpers.xml_to_df import xml_to_csv"
+    "from helpers.txt_to_df import txt_to_df\n",
+    "from helpers.xml_to_df import xml_to_df"
    ]
   },
   {
@@ -26,14 +26,14 @@
     "    tf_record_filename=\"1_342_train\",\n",
     "    label_map_file_name=\"label_map\",\n",
     "    annotations_path=\"1_342\",\n",
-    "    processor=xml_to_csv,\n",
+    "    processor=xml_to_df,\n",
     ")\n",
     "create_tf_record(\n",
     "    images_dir=\"images/test\",\n",
     "    tf_record_filename=\"1_342_test\",\n",
     "    label_map_file_name=\"label_map\",\n",
     "    annotations_path=\"1_342\",\n",
-    "    processor=xml_to_csv,\n",
+    "    processor=xml_to_df,\n",
     ")"
    ],
    "metadata": {
@@ -52,14 +52,14 @@
     "    tf_record_filename=\"icdar_2013/train.tfrecord\",\n",
     "    label_map_file_name=\"icdar_2013/label_map\",\n",
     "    annotations_path=\"icdar_2013/train\",\n",
-    "    processor=txt_to_csv,\n",
+    "    processor=txt_to_df,\n",
     ")\n",
     "create_tf_record(\n",
     "    images_dir=\"images/icdar_2013_images/test\",\n",
     "    tf_record_filename=\"icdar_2013/test.tfrecord\",\n",
     "    label_map_file_name=\"icdar_2013/label_map\",\n",
     "    annotations_path=\"icdar_2013/test\",\n",
-    "    processor=txt_to_csv,\n",
+    "    processor=txt_to_df,\n",
     ")"
    ],
    "metadata": {
